lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:5: error: not found: value setyPousseeDesiree
  	setyPousseeDesiree(0)
        ^