lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize() {
  }

  override def step() {
  	setyPousseeDesiree(0)
  	for (i <- 0 to 5) {
  		setAngleDesire(45)
  	}
  }
